fix(sidebar): add scrollbar for playlists-list

--- a/src/components/SideBar/SideBar.module.css
+++ b/src/components/SideBar/SideBar.module.css
@@ -7,6 +7,7 @@
   position: relative;
   padding-top: 24px;
   font-weight: 400;
+  height: calc(100vh - 115px);
 }
 
 .sidebar a {
@@ -23,13 +24,29 @@
   flex-direction: column;
 }
 
+.playlists-wrapper {
+  overflow-y: auto;
+}
+
+.playlists-wrapper::-webkit-scrollbar {
+  width: 16px;
+  opacity: 0;
+}
+
+.playlists-wrapper::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.3);
+  border: 2px solid transparent;
+  background-clip: padding-box;
+  opacity: 0;
+}
+
 .playlists {
   display: flex;
   flex: auto;
   flex-direction: column;
   height: 100%;
   max-height: 100%;
-  padding: 10px 24px;
+  padding: 10px 2px 10px 24px;
   font-size: 14px;
   font-weight: 300;
 }
@@ -50,9 +67,10 @@
   opacity: 1;
 }
 
-.playlists > div:first-child {
+.divider {
   height: 10px;
   border-top: 1px solid #282828;
+  margin: 5px 20px 0 20px;
 }
 
 .footer {
